# CG-Labs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Premake5.lua  README.md
models/: README.md
src/: clear_rendertarget.cpp  clear_rendertarget.h  clear_rendertarget_main.cpp  depth_buffer.cpp  depth_buffer.h  depth_buffer_main.cpp  draw_line.cpp  draw_line.h  draw_line_main.cpp  projections.cpp  projections.h  projections_main.cpp  triangle_rasterization.cpp  triangle_rasterization.h  triangle_rasterization_main.cpp
